# db-migrator

./: Cargo.toml  README.md
src/: config.rs  data_migrator.rs  db_connector.rs  main.rs  schema_manager.rs
